# brightsign-npu-object-extension

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_REPORT.md  OrangePI_Development.md  README.md  TODO.md  bsext_init  build  build-apps  build-platforms  compile-models  manifest-config.json  manifest-config.template.json  package  redaction.patch  redaction_clean.patch  runall.sh  setup  versioning_plan.md
.claude/: settings.local.json
.claude/sessions/: session-log-setup-script-fix.md
.github/workflows/: build-extension.yml
docs/: design-principles-analysis.md  integration-extension-points.md  manifest-guide.md  software-architecture.md
include/: frame_writer.h  inference.h  postprocess.h  publisher.h  utils.h  yolo.h  yolox.h
plans/: redact_yolov8.md
schemas/: extension-manifest-v1.json
scripts/: build-image-stream-server.sh  runall.sh
sh/: make-extension-lvm  rollback-extension.sh  setup_python_env  uninstall.sh  update-extension.sh  validate-manifest.sh
src/: frame_writer.cpp  inference.cpp  main.cpp  postprocess.cc  publisher.cpp  utils.cc  yolo.cc  yolox.cc
src/transports/: file_transport.cpp
tests/: CMakeLists.txt  mock_registry.cpp  mock_registry.h  test_bs_formatter_fix.cpp  test_class_parsing  test_class_parsing.cpp  test_frame_writer_filtering.cpp  test_getclassname  test_integration  test_integration.cpp  test_refactored_publishers.cpp
